# mcp-demo

./: .gitignore  EchoTool.cs  README.md  Untitled-1.json  launch.json  main.py  mcp-demo.sln  pyproject.toml  test_main.py  weather.json  whistler.html
csharp/: mcp-demo.csproj  mcp-demo.sln
csharp/mcp-demo/: EchoTool.cs  Forecast.cs  ForecastDay.cs  Program.cs  WeatherResult.cs  WhistlerWeatherTool.cs  mcp-demo.csproj
csharp/mcp-demo.tests/: WhistlerWeatherToolTests.cs  mcp-demo.tests.csproj
python/: pyproject.toml  runServer.ps1  test_main.py
